# MyMusic

./: README.md
app/: build.gradle
app/src/androidTest/java/com/test/mmusic/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/test/mmusic/: MainActivity.kt  Test.kt  TestRelease.kt  Test_Relecle.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/test/mmusic/: ExampleUnitTest.kt
myplayer/: CMakeLists.txt  build.gradle
myplayer/src/androidTest/java/com/test/myplayer/: ExampleInstrumentedTest.java
myplayer/src/main/: AndroidManifest.xml
myplayer/src/main/cpp/: AndroidLog.h  WlAudio.cpp  WlAudio.h  WlCallJava.cpp  WlCallJava.h  WlFFmpeg.cpp  WlFFmpeg.h  WlPlaystatus.cpp  WlPlaystatus.h  WlQueue.cpp  WlQueue.h  native-lib.cpp
myplayer/src/main/cpp/include/libavcodec/: avcodec.h  dirac.h
myplayer/src/main/cpp/include/libavformat/: avformat.h
myplayer/src/main/cpp/include/libavutil/: dict.h  imgutils.h  log.h  opt.h  parseutils.h  pixfmt.h  tree.h
myplayer/src/main/java/com/test/myplayer/: Demo.java  WlTimeInfo.java
myplayer/src/main/java/com/test/myplayer/listener/: WlOnLoadListener.java  WlOnParparedListener.java  WlOnPauseResumeListener.java  WlOnTimeInfoListener.java
myplayer/src/main/java/com/test/myplayer/log/: MyLog.java
myplayer/src/main/java/com/test/myplayer/player/: WlPlayer.java
myplayer/src/main/java/com/test/myplayer/util/: WlTimeUtil.java
myplayer/src/test/java/com/test/myplayer/: ExampleUnitTest.java
